[metadata]
name = dockerblade
version = 0.0.1
author = Christopher Timperley
author-email = ctimperley@cmu.edu
description-file = README.rst
license-file = LICENSE
url = "https://github.com/ChrisTimperley/dockerblade"
keywords = docker, python, files, shell, wrapper
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[aliases]
test = pytest

[tool:pytest]
addopts = -rx -v

[mypy]
ignore_missing_imports = True

[pycodestyle]
ignore = W605,E302
max_line_length = 79

[options]
include_package_data = True
python_requires = >= 3.6
install_requires =
  attrs ~= 19.2.0
package_dir =
  =src
packages = find:

[options.packages.find]
where = src
