[metadata]
name = dockerblade
author = Christopher Timperley
author-email = christimperley@googlemail.com
description-file = README.rst
license-file = LICENSE
url = https://github.com/ChrisTimperley/dockerblade
keywords = docker, python, files, shell, wrapper
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[tox]
envlist = py36, py37, py38

[testenv]
deps =
  flake8==3.8.2
  pep8-naming==0.10.0
  mypy==0.770
  pytest==5.4.2
  pytest-cov==2.10.0
commands =
  mypy src
  flake8 src
  pytest --cov=dockerblade

[aliases]
docs = build_sphinx
test = pytest

[tool:pytest]
addopts = -rx -v

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True

[flake8]
ignore = W605,E302
max-line-length = 79
per-file-ignores =
  src/dockerblade/__init__.py:F401
  src/dockerblade/files.py:F811
  src/dockerblade/shell.py:F811

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[options]
include_package_data = True
python_requires = >= 3.6
install_requires =
  attrs ~= 19.3
  docker ~= 4.1
  loguru ~= 0.4
  psutil ~= 5.7
  mslex == 0.3
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
test =
  pytest ~= 5.2.1
build_sphinx =
  sphinx ~= 2.4.4
  sphinx-autodoc-typehints ~= 1.10.3
